Add GeoFence Broadcast Receiver

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
                 android:src="@drawable/ic_globe_primary_24dp" />
 
             <Switch
-                android:id="@+id/enable_switch"
+                android:id="@+id/switch_enable_geofences"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
